JEDIT 4.2 VERSION HISTORY

{{{ Version 2.4pre15

{{{ Bug Fixes

- The rest.xml and embperl.xml mode files were missing from the
  distribution.

- HyperSearch results would not use floating positions if the files
  being searched were symbolic links.

}}}

}}}

{{{ Version 4.2pre14

Thanks to Gerd Knops, Ollie Rutherfurd, Paul Libbrecht and Rob Watson
for contributing to this release.

{{{ Miscellaneous Changes

- jEditLauncher no longer included due to a large number of bugs, and
  the fact that it is unmaintained.

- Join Lines (C+j) now inserts a space between joined lines.

- Added some global abbreviations for inserting Greek letters and
  various math symbols (Paul Libbrecht).

- The buffer state icons and window icon can now be customized with
  icon themes.

}}}
{{{ Syntax Highlighting

- PL/I syntax highlighting (Rob Watson).

- Embperl syntax highlighting (Ollie Rutherfurd).

- reStructuredText syntax highligting (Ollie Rutherfurd).

- Fix an issue with SSI directives in SHTML files.

}}}
{{{ Bug Fixes

- Fix exceptions being thrown if the text area has a negative height.

- "File Changed Since Save" warning on Reload now has the buffer name,
  to make it clear which buffer is being reloaded.

- Abbreviations are now loaded/saved using the UTF8 encoding, making
  them more friendly towards international characters.

- Fix a few problems (mainly not closing streams after exceptions, and
  unused fields/methods) found by the FindBugs tool.

- Fix possible ArrayIndexOutOfBoundsException in
  DisplayManager.hideLineRange() when narrowing to folds in
  indent-folded buffers.

- Fix for window geometry load/save on multiple monitor setups
  (Gerd Knops).

- If a plugin creates an ActionSet with a null label (which would be a
  bug in the plugin), the Shortcuts option pane didn't work.

- The folding triangles in the gutter were not always being repainted
  when using indent folding.

}}}

}}}

{{{ Version 4.2pre13
